# simple_RAG_demo

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  spec.txt
agents/: __init__.py  agent_models.py  agent_types.py  meta_agent.py
src/: __init__.py  config.py  models.py
src/agents/: __init__.py  meta_agent.py
src/agents/sub_agents/: __init__.py  rag_agent.py  web_search_agent.py
src/agents/tools/: __init__.py  rag_tool.py
src/app/: __init__.py  agent_cli.py  chat_cli.py  indexer_cli.py
src/core/: indexing_service.py  qa_service.py
src/prompts/: investor_prompt.py  language_recognition_prompt.py  query_enhancement_prompt.py
src/server/: routes.py  schemas.py  services.py  web_app.py
src/utils/: __init__.py  citation_handlers.py  file_handlers.py  google_translate.py  http_client.py  index_manager.py  language_detection.py  llm_handlers.py  polling.py  query_enhancement.py  rag_handlers.py  user_interaction.py  vector_store_handlers.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
tools/: __init__.py  rag_tool.py  tool_models.py  tool_registry.py  translator_tool.py
~/.ssh/: config
